--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest test"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vitest": "^0.30.1"
